--- a/podstrona1.html
+++ b/podstrona1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>Programy DAW</header>
+    <header><h1>Programy DAW</h1></header>
     <section>
       <div class="block">
         <h2>FL Studio</h2>
