--- a/podstrona2.html
+++ b/podstrona2.html
@@ -7,6 +7,39 @@
     <title>Document</title>
   </head>
   <body>
-    <header>Podstawowe Modulatory Dźwięków</header>
+    <header><h1>Podstawowe modulatory dźwięku</h1></header>
+    <section>
+      <div class="block">
+        <h2>Kompresor</h2>
+        <p>
+          Jego zadaniem jest korekcja dynamiki, zwana kompresją dynamiki
+          materiału dźwiękowego, według ustalonych przez użytkownika parametrów.
+          Podstawowymi parametrami kształtującymi działanie kompresora są: punkt
+          wzbudzania i stopień kompresji.
+        </p>
+      </div>
+      <div class="block">
+        <h2>Filter częstotliwości</h2>
+        <p>
+          Ten modulator jest odpowiedzialny za przepuszczanie lub blokowanie
+          sygnałów w określonym zakresie częstotliwości.
+        </p>
+      </div>
+      <div class="block">
+        <h2>Chorus i Flanger</h2>
+        <p>
+          Flanger i Chorys tworzą złożone, przestrzenne brzmienie poprzez
+          miksowanie oryginalnego sygnału z jego opóźnioną kopią.
+        </p>
+      </div>
+      <div class="block">
+        <h2>Zniekształczacze i Saturatory</h2>
+        <p>
+          To efekty, które zmieniają i przesterowują sygnał dźwiękowy, nadając
+          mu charakterystyczne, "brudne" brzmienie, lub nadają mu więcej
+          "koloru".
+        </p>
+      </div>
+    </section>
   </body>
 </html>
