--- a/podstrona3.html
+++ b/podstrona3.html
@@ -7,6 +7,35 @@
     <title>Document</title>
   </head>
   <body>
-    <header>Jak stworzyć pierwszy utwór?</header>
+    <header><h1>Jak stworzyć swoój pierwszy utwór?</h1></header>
+    <section>
+      <div class="block">
+        <h2>Po prostu próbuj</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+          eligendi itaque esse! Voluptatibus pariatur architecto repudiandae
+          ipsum autem voluptate, excepturi sunt, sit incidunt, quae deleniti
+          necessitatibus delectus commodi a magnam.
+        </p>
+      </div>
+      <div class="block">
+        <h2>Skale muzyczne</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+          recusandae quidem nisi! Unde mollitia voluptatum tempora fugit
+          exercitationem, adipisci quam doloremque quis ab eveniet dolore
+          nostrum voluptas maiores doloribus aspernatur.
+        </p>
+      </div>
+      <div class="block">
+        <h2>Jak budować akordy?</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime
+          dolorum nulla enim commodi quos quibusdam consequatur eligendi
+          voluptatum. Error optio et vel distinctio obcaecati sit dolores
+          ducimus, reiciendis ut asperiores!
+        </p>
+      </div>
+    </section>
   </body>
 </html>
