--- a/index.html
+++ b/index.html
@@ -12,29 +12,33 @@
     </header>
 
     <nav>
-      <a href="podstrona1.html">Jaki program DAW wybrać?</a>
-      <a href="podstrona2.html">Podstawowe modulatory dźwięków.</a>
-      <a href="podstrona3.html">Jak stworzyć pierwszy utwór?</a>
+      <ul class="nav-list">
+        <li><a href="podstrona1.html">Jaki program DAW wybrać?</a></li>
+        <li><a href="podstrona2.html">Podstawowe modulatory dźwięku</a></li>
+        <li><a href="podstrona3.html">Jak stworzyć pierwszy utwór?</a></li>
+      </ul>
     </nav>
 
     <section>
       <div class="block">
-        <div id="block1">
-          <h2>Dla kogo powstała ta strona?</h2>
-          <p>
-            Strona ta powstała, aby pomagać ludziom, którzy chcą zacząć stawiać
-            pierwsze kroki w produkcji muzyki.
-          </p>
+        <div id="block101">
+          <div id="block1">
+            <h2>Dla kogo powstała ta strona?</h2>
+            <p>
+              Strona ta powstała, aby pomagać ludziom, którzy chcą zacząć
+              stawiać pierwsze kroki w produkcji muzyki.
+            </p>
+          </div>
         </div>
       </div>
 
       <div class="block">
         <div id="block2">
-          <h2>Czego się tu dowiesz</h2>
+          <h2>Czego się tu dowiesz.</h2>
           <p>
             Na mojej stronie zawartę są podstawowe informacje, które pozwolą
             rozwinąć skrzydła każdemu kto posiada ambicję, aby zacząć tworzyć
-            muzykę. Od wyboru programu DAW po podstawy teorii muzyki-wszystkie
+            muzykę. Od wyboru programu DAW, po podstawy teorii muzyki-wszystkie
             te informacje znajdziesz na mojej stronie.
           </p>
         </div>
@@ -42,19 +46,18 @@
 
       <div class="block">
         <div id="block3">
-          <h2>Lorem ipsum</h2>
+          <h2>Kilka słów o mnie.</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum id
-            quod exercitationem dignissimos fuga repudiandae voluptate
-            consectetur suscipit porro fugit perferendis iure ut ab nemo quidem,
-            vitae dolore, non cupiditate?
+            Jestem absolwenetem Szkoły Muzyki Nowoczesnej we Wrocławiu, a także
+            twórcą muzycznym. Moją pasją jest tworzenie muzyki, a także
+            dzielenie się wiedzą z innymi.
           </p>
         </div>
       </div>
     </section>
 
     <footer>
-      <p>&copy; 2024 Takt i Melodia</p>
+      <p id="footer-p">&copy; 2024 Takt i Melodia</p>
     </footer>
   </body>
 </html>
