Drobne zmiany w tekscie

--- a/podstrona2.html
+++ b/podstrona2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header><h1>Podstawowe modulatory dźwięku</h1></header>
+    <header><h1>Podstawowe modulatory dźwięku.</h1></header>
     <section>
       <div class="block">
         <h2>Kompresor</h2>
