--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <ul class="nav-list">
         <li><a href="podstrona1.html">Jaki program DAW wybrać?</a></li>
-        <li><a href="podstrona2.html">Podstawowe modulatory dźwięku</a></li>
+        <li><a href="podstrona2.html">Podstawowe modulatory dźwięku.</a></li>
         <li><a href="podstrona3.html">Jak stworzyć pierwszy utwór?</a></li>
       </ul>
     </nav>
