--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section>
       <div class="block">
-        <div id="block101">
+        
           <div id="block1">
             <h2>Dla kogo powstała ta strona?</h2>
             <p>
@@ -29,29 +29,30 @@
               stawiać pierwsze kroki w produkcji muzyki.
             </p>
           </div>
+        
         </div>
-      </div>
 
-      <div class="block">
-        <div id="block2">
-          <h2>Czego się tu dowiesz.</h2>
-          <p>
-            Na mojej stronie zawartę są podstawowe informacje, które pozwolą
-            rozwinąć skrzydła każdemu kto posiada ambicję, aby zacząć tworzyć
-            muzykę. Od wyboru programu DAW, po podstawy teorii muzyki-wszystkie
-            te informacje znajdziesz na mojej stronie.
-          </p>
+        <div class="block">
+          <div id="block2">
+            <h2>Czego się tu dowiesz.</h2>
+            <p>
+              Na mojej stronie zawartę są podstawowe informacje, które pozwolą
+              rozwinąć skrzydła każdemu kto posiada ambicję, aby zacząć tworzyć
+              muzykę. Od wyboru programu DAW, po podstawy teorii
+              muzyki-wszystkie te informacje znajdziesz na mojej stronie.
+            </p>
+          </div>
         </div>
-      </div>
 
-      <div class="block">
-        <div id="block3">
-          <h2>Kilka słów o mnie.</h2>
-          <p>
-            Jestem absolwenetem Szkoły Muzyki Nowoczesnej we Wrocławiu, a także
-            twórcą muzycznym. Moją pasją jest tworzenie muzyki, a także
-            dzielenie się wiedzą z innymi.
-          </p>
+        <div class="block">
+          <div id="block3">
+            <h2>Kilka słów o mnie.</h2>
+            <p>
+              Jestem absolwenetem Szkoły Muzyki Nowoczesnej we Wrocławiu, a
+              także twórcą muzycznym. Moją pasją jest tworzenie muzyki, a także
+              dzielenie się wiedzą z innymi.
+            </p>
+          </div>
         </div>
       </div>
     </section>
