--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
-    <title>Takt&Melodia</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
+    <title>$RUTU</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <h1>Takt&Melodia</h1>
+      <h1>$RUTU</h1>
     </header>
 
     <nav>
       <ul class="nav-list">
-        <li><a href="podstrona1.html">Jaki program DAW wybrać?</a></li>
-        <li><a href="podstrona2.html">Podstawowe modulatory dźwięku.</a></li>
-        <li><a href="podstrona3.html">Jak stworzyć pierwszy utwór?</a></li>
+        <li><a href="https://soundcloud.com/kamil-stanek-standsa">You can find my music here.</a></li>
+        <li><a href="podstrona2.html">Songs in which I was involved.</a></li>
       </ul>
     </nav>
 
@@ -26,10 +28,9 @@
       <div class="block">
         
           <div id="block1">
-            <h2>Dla kogo powstała ta strona?</h2>
+            <h2>Who am I?</h2>
             <p>
-              Strona ta powstała, aby pomagać ludziom, którzy chcą zacząć
-              stawiać pierwsze kroki w produkcji muzyki.
+              I'm young music producer from Poland, Szczecin. I've been creating music since 2017.
             </p>
           </div>
         
@@ -37,23 +38,18 @@
 
         <div class="block">
           <div id="block2">
-            <h2>Czego się tu dowiesz.</h2>
+            <h2>Why am I making music?</h2>
             <p>
-              Na mojej stronie zawartę są podstawowe informacje, które pozwolą
-              rozwinąć skrzydła każdemu kto posiada ambicję, aby zacząć tworzyć
-              muzykę. Od wyboru programu DAW, po podstawy teorii
-              muzyki-wszystkie te informacje znajdziesz na mojej stronie.
+              Most important factor in my art work is need to create something new, something that was never heard before. Music is my way to express my feelings.
+
             </p>
           </div>
         </div>
 
         <div class="block">
           <div id="block3">
-            <h2>Kilka słów o mnie.</h2>
-            <p>
-              Jestem absolwenetem Szkoły Muzyki Nowoczesnej we Wrocławiu, a
-              także twórcą muzycznym. Moją pasją jest tworzenie muzyki, a także
-              dzielenie się wiedzą z innymi.
+            <h2>How could I describe my music?</h2>
+            <p>Most of my inspirations come from hip hop, elecrtronic music, synth pop, new wave and many others. I always stay open-minded. I realy like to experiment with the texture of sound. 
             </p>
           </div>
         </div>
@@ -61,7 +57,7 @@
     </section>
 
     <footer>
-      <p id="footer-p">&copy; 2024 Takt i Melodia</p>
+      <p id="footer-p">&copy; $RUTU 2024</p>
     </footer>
   </body>
 </html>
