--- a/podstrona2.html
+++ b/podstrona2.html
@@ -4,41 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles2.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitter&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <header><h1>Podstawowe modulatory dźwięku.</h1></header>
+    <header><h1>Songs that I produced or coprocduced</h1></header>
     <section>
       <div class="block">
-        <h2>Kompresor</h2>
-        <p>
-          Jego zadaniem jest korekcja dynamiki, zwana kompresją dynamiki
-          materiału dźwiękowego, według ustalonych przez użytkownika parametrów.
-          Podstawowymi parametrami kształtującymi działanie kompresora są: punkt
-          wzbudzania i stopień kompresji.
-        </p>
+        <div id="blok1">
+          <h2>Songs i produced</h2>
+          <ul>
+            <li>
+              <a
+                href="https://open.spotify.com/track/0hZYLMBr8oyygEm21wLmjq?si=941794da5b6c4e8b"
+                >KAX-Cytrynowy trip</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://open.spotify.com/track/3zkRi7sTN3UUFyaMCinWqV?si=99c2aaa899cd4c3f"
+                >Mar-Cell, KAX, WVC, DannyB-Pullup</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="block">
-        <h2>Filter częstotliwości</h2>
-        <p>
-          Ten modulator jest odpowiedzialny za przepuszczanie lub blokowanie
-          sygnałów w określonym zakresie częstotliwości.
-        </p>
-      </div>
-      <div class="block">
-        <h2>Chorus i Flanger</h2>
-        <p>
-          Flanger i Chorys tworzą złożone, przestrzenne brzmienie poprzez
-          miksowanie oryginalnego sygnału z jego opóźnioną kopią.
-        </p>
-      </div>
-      <div class="block">
-        <h2>Zniekształczacze i Saturatory</h2>
-        <p>
-          To efekty, które zmieniają i przesterowują sygnał dźwiękowy, nadając
-          mu charakterystyczne, "brudne" brzmienie, lub nadają mu więcej
-          "koloru".
-        </p>
+        <div id="blok2">
+          <h2>Songs that I coproduced</h2>
+          <ul>
+            <li>
+              <a
+                href="https://open.spotify.com/track/0ZcNdglo38LZApnf2g8yFR?si=64c2447e71d142c3"
+                >DannyB-Co to jest lima</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
   </body>
